tests/specs/ecosystem/trpc/server/0_0_3.test
trpc/server/0.0.3
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/transformer.ts:113:17
    | 
113 | export function transformTRPCResponse<
    |                 ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/transformer.ts:129:10
    | 
129 | function transformResultInner<TRouter extends AnyRouter, TOutput>(
    |          ^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/router.ts:134:17
    | 
134 | export function createRouterFactory<TRoot extends AnyRootTypes>(
    |                 ^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/router.ts:223:17
    | 
223 | export function callProcedure(
    |                 ^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/router.ts:245:17
    | 
245 | export function createCallerFactory<TRoot extends AnyRootTypes>() {
    |                 ^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/middleware.ts:122:17
    | 
122 | export function createMiddlewareFactory<
    |                 ^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/middleware.ts:163:14
    | 
163 | export const experimental_standaloneMiddleware = <
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/middleware.ts:181:17
    | 
181 | export function createInputMiddleware<TInput>(parse: ParseFn<TInput>) {
    |                 ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/unstable-core-do-not-import/middleware.ts:214:17
    | 
214 | export function createOutputMiddleware<TOutput>(parse: ParseFn<TOutput>) {
    |                 ^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/initTRPC.ts:50:3
   | 
50 |   context<TNewContext extends object | ((...args: unknown[]) => object)>() {
   |   ^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/initTRPC.ts:58:3
   | 
58 |   meta<TNewMeta extends object>() {
   |   ^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/initTRPC.ts:66:3
   | 
66 |   create<TOptions extends RuntimeConfigOptions<TContext, TMeta>>(
   |   ^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/unstable-core-do-not-import/initTRPC.ts:148:14
    | 
148 | export const initTRPC = new TRPCBuilder();
    |              ^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/http/batchStreamFormatter.ts:20:17
   | 
20 | export function getBatchStreamFormatter() {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/http/getHTTPStatusCode.ts:32:17
   | 
32 | export function getHTTPStatusCode(json: TRPCResponse | TRPCResponse[]) {
   |                 ^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/http/getHTTPStatusCode.ts:59:17
   | 
59 | export function getHTTPStatusCodeFromError(error: TRPCError) {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/unstable-core-do-not-import/error/TRPCError.ts:60:19
   | 
60 |   public readonly code;
   |                   ^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/createProxy.ts:11:10
   | 
11 | function createInnerProxy(callback: ProxyCallback, path: string[]) {
   |          ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/unstable-core-do-not-import/createProxy.ts:38:14
   | 
38 | export const createRecursiveProxy = (callback: ProxyCallback) =>
   |              ^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/observable/observable.ts:121:17
    | 
121 | export function observableToPromise<TValue>(
    |                 ^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/ws.ts:72:17
   | 
72 | export function applyWSSHandler<TRouter extends AnyRouter>(
   |                 ^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/standalone.ts:29:17
   | 
29 | export function createHTTPHandler<TRouter extends AnyRouter>(
   |                 ^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/standalone.ts:49:17
   | 
49 | export function createHTTPServer<TRouter extends AnyRouter>(
   |                 ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/node-http/internals/contentType.ts:20:17
   | 
20 | export function createNodeHTTPContentTypeHandler(
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/node-http/nodeHTTPRequestHandler.ts:33:23
   | 
33 | export async function nodeHTTPRequestHandler<
   |                       ^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
 --> /src/adapters/node-http/content-type/json/index.ts:5:14
  | 
5 | export const nodeHTTPJSONContentTypeHandler = createNodeHTTPContentTypeHandler({
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
  | 
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/node-http/content-type/form-data/index.ts:35:16
   | 
35 | async function parseMultipartFormData(
   |                ^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/adapters/node-http/content-type/form-data/index.ts:108:10
    | 
108 | function isMultipartFormDataRequest(req: NodeHTTPRequest) {
    |          ^^^^^^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/adapters/node-http/content-type/form-data/index.ts:116:14
    | 
116 | export const nodeHTTPFormDataContentTypeHandler =
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /src/adapters/fastify/fastifyRequestHandler.ts:44:23
   | 
44 | export async function fastifyRequestHandler<
   |                       ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/adapters/aws-lambda/utils.ts:104:17
    | 
104 | export function getHTTPMethod(event: APIGatewayEvent) {
    |                 ^^^^^^^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/adapters/aws-lambda/utils.ts:117:17
    | 
117 | export function getPath(event: APIGatewayEvent) {
    |                 ^^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


